added filter section

--- a/rooms.html
+++ b/rooms.html
@@ -38,6 +38,8 @@
         </div>
         </section>
 
+    
+
             <!-- features rooms -->
 
     <section>
@@ -46,6 +48,26 @@
             </div>
             <hr class="line_features_rooms">
         </div>
+
+<!-- filters  --> 
+ <section>
+     <div class="filters">
+      <input type="text" class="search-input" id="search-input" placeholder="🔎 Type to search" />
+      <select class="select" name="home">
+        <option value="double">Double</option>
+        <option value="Triple">Triple</option>
+        <option value="Family">Family</option>
+      </select>
+      <div>
+        <label for="available"> Available </label>
+        <input type="checkbox" class="available-checkbox" name="checkbox" id="">
+        <label for="available">Pets friendly</label>
+        <input type="checkbox" class="available-checkbox" name="checkbox" id="">
+        <label for="available">Breakfast included </label>
+        <input type="checkbox" class="available-checkbox" name="checkbox" id="">
+</section>
+
+
         <div class="cards">
        
         </div>
