--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="cta-home">
         <h2 class="intro_title">Hotel Resort</h2>
         <hr class="line_intro_title">
-        <h3 class="intro_spirit">Black Friday Deals: Save Up To 40%!</h3>
-        <button class="intro_button"><a href="rooms.html" >See our rooms</button></a>
+        <h3 class="intro_spirit">Save Up To 40%!</h3>
+        <a href="rooms.html" class="intro_button" >See our rooms</a>
         </div>
         </section>
     
@@ -109,7 +109,7 @@
     <!-- footer section -->
 
             <footer class="footer">
-                <p>Hotel Resort © 2021, All Rights Reserved</p>
+                <p>Hotel Resort © 2022, All Rights Reserved</p>
             </footer>
             
             <script src="index.js">
