--- a/rooms.html
+++ b/rooms.html
@@ -9,6 +9,14 @@
   <script src="https://kit.fontawesome.com/1eac6e976b.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
+
+<!-- metatags -->
+<meta name="title" property="og:title" content="Hotel Resort Paraíso">
+<meta property="og:type" content="website">
+<meta name="image" property="og:image" content="./images/home-image.jpg">
+<meta name="description" property="og:description" content="Hotel resort website: exotic, top rated, lovely">
+<meta name="author" content="elisa canyelles">
+<meta name="url" property='og:url' content='https://hotel-resort-paraiso.netlify.app/' />
 </head>
 
 <body>
