--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
     <script src="https://kit.fontawesome.com/1eac6e976b.js" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
+    <!-- metatags linkedin -->
+    <meta name="title" property="og:title" content="Hotel Resort Paraíso">
+    <meta property="og:type" content="website">
+    <meta name="image" property="og:image" content="./images/home-image.jpg">
+    <meta name="description" content="Hotel resort Paraíso: exotic, top rated, lovely">
+    <meta name="author" content="elisa canyelles">
+    <meta name="url" property='og:url' content='https://hotel-resort-paraiso.netlify.app/' />
+    
+    <!-- Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hotel-resort-paraiso.netlify.app/">
+    <meta property="og:title" content="Hotel Resort Paraíso">
+    <meta property="og:description" content="Hotel resort Paraíso: exotic, top rated, lovely">
+    <meta property="og:image" content="./images/home-image.jpg">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://hotel-resort-paraiso.netlify.app/">
+    <meta property="twitter:title" content="Hotel Resort Paraíso">
+    <meta property="twitter:description" content="Hotel resort Paraíso: exotic, top rated, lovely">
+    <meta property="twitter:image" content="./images/home-image.jpg">
+
 </head>
 
 <body>
